# OpenCv_Qt

./: CMakeLists.txt  README.md
